# quickcheck-fscheck-samples

./: .gitignore  quickcheck-samples.cabal
samples-fscheck/: README  paket.dependencies  samples-fscheck.fsx
samples-fscheck/tests/: GettingStarted.fs
samples-quickcheck/: README  samples-quickcheck.cabal
samples-quickcheck/tests/: GettingStartedSpec.hs
tests/: GettingStarted.hs  GettingStartedSpec.hs  HLint.hs
